2011-08-29  Charles Turner <chturne@gmail.com>

	* FieldLocation.java (setKindFlags): Throw a RuntimeException if
	the declared field is null.

2011-08-28  Per Bothner  <per@bothner.com>

	* CompileReflect.java (inlineClassName): Don't inline if
	checkKnownClass returns -1.
	This fixes Savannah bug#34003 "Unknown class confuses inliner".

2011-08-17  Per Bothner  <per@bothner.com>

	* CompileBuildObject.java (make): Use Compilation#lookup as it is
	more general/robust than ScopeExp#lookup.

2011-07-13  Per Bothner  <per@bothner.com>

	Refactoring for "object building" to make support custom bulders.
	* CompileBuildObject.java: New class.
	* Makefile.am: Update accordingly.
	* CompileInvoke.java: Some object construction logic moved to
	CompileBuildObject.

	* Invoke.java (applyN): Remove two ClassType casts, so the code will
	also work for other types, such as LangObjType.

2011-07-12  Per Bothner  <per@bothner.com>

	* MakeAnnotation.java (asAnnotation): Moved to
	gnu/bytecode/AnnotationEntry.java.

2011-07-04  Per Bothner  <bothner@kuling.bothner.com>

	* CompileInvoke.java (validateApplyInvoke): Complain if an object
	constructor has post-keyword "children" arguments, but no add method.

2011-06-29  Per Bothner  <bothner@kuling.bothner.com>

	* ClassMethods.java (removeRedundantMethods): Handle TypeVariable.
	(getMethods): Handle lookup in a ParameterizedType.

2011-06-16  Per Bothner  <per@bothner.com>

	* CompileReflect.java (makeSetterCall): New method.
	(validateApplySlotSet): Rerite to do lookup, type inference
	and error checking here, rather than at code-generation time.
	* CompileInvoke.java (validateApplyInvoke): A Method returned from
	checkKeywords isn't necessarily applicable or the best match.
	Thus use CompileReflect.makeSetterCall for proper typing.
	* SlotSet.java (compile): Simplify, since lookup now done earlier.
	(compileSet): Remove method.

	* CompileInvoke.java (validateApplyInvoke): Use ALLOCATE_ON_STACK